# src/swagger/user.swagger.json
@@ -1194,6 +1194,35 @@
           }
         ]
       }
+    },
+    "/api/user/buyAgain": {
+      "get": {
+        "tags": [
+          "Core Functionality"
+        ],
+        "summary": " buy again Api",
+        "responses": {
+          "200": {
+            "description": "Successful Operation"
+          },
+          "400": {
+            "description": "Bad request - Invalid input, validation error"
+          },
+          "401": {
+            "description": "Unauthorized - Authentication failure"
+          },
+          "500": {
+            "description": "Internal server error - Something went wrong on the server side"
+          }
+        },
+        "security": [
+          {
+            "access_token": [
+              "access_token"
+            ]
+          }
+        ]
+      }
     }
     },
     "components": {
